<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/seller_apply_head"
            layout="@layout/head_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/seller_apply_head">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/noticeSellerShopName"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/applySellerShopName"
                    android:layout_alignBottom="@+id/applySellerShopName"
                    android:text="公司名称" />

                <EditText
                    android:id="@+id/applySellerShopName"
                    style="@style/shop_apply_right_et"
                    android:layout_toEndOf="@+id/noticeSellerShopName"
                    android:hint="请输入公司名"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/noticeSellerShopAddress"
                    style="@style/shop_apply_left_tv"
                    android:layout_below="@+id/noticeSellerShopName"
                    android:layout_alignTop="@+id/applySellerShopAddr"
                    android:layout_alignBottom="@+id/applySellerShopAddr"
                    android:text="公司地址" />

                <TextView
                    android:id="@+id/applySellerShopAddr"
                    style="@style/shop_apply_right_et"
                    android:layout_below="@+id/applySellerShopName"
                    android:layout_toEndOf="@+id/noticeSellerShopAddress"
                    android:hint="请选择公司地址"
                    android:inputType="text"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingBottom="@dimen/dp_8" />

                <TextView
                    android:id="@+id/noticeSellerShopScope"
                    style="@style/shop_apply_left_tv"
                    android:layout_below="@+id/noticeSellerShopAddress"
                    android:layout_alignTop="@+id/applySellerShopScope"
                    android:layout_alignBottom="@+id/applySellerShopScope"
                    android:text="经营范围" />

                <TextView
                    android:id="@+id/applySellerShopScope"
                    style="@style/shop_apply_right_et"
                    android:layout_below="@+id/noticeSellerShopAddress"
                    android:layout_toEndOf="@+id/noticeSellerShopScope"
                    android:drawableLeft="@drawable/arrow_down_16"
                    android:drawablePadding="@dimen/dp_12"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingBottom="@dimen/dp_8"
                    android:text="水" />

                <TextView
                    android:id="@+id/noticeSellerShopFundDate"
                    style="@style/shop_apply_left_tv"
                    android:layout_below="@+id/applySellerShopScope"
                    android:layout_alignTop="@+id/applySellerShopFundDate"
                    android:layout_alignBottom="@+id/applySellerShopFundDate"
                    android:text="成立日期" />

                <TextView
                    android:id="@+id/applySellerShopFundDate"
                    style="@style/shop_apply_right_et"
                    android:layout_below="@+id/applySellerShopScope"
                    android:layout_toEndOf="@+id/noticeSellerShopFundDate"
                    android:drawableLeft="@drawable/arrow_down_16"
                    android:drawablePadding="@dimen/dp_12"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingBottom="@dimen/dp_8" />

                <TextView
                    android:id="@+id/noticeSellerShopStartMoney"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/applySellerShopStartMoney"
                    android:layout_alignBottom="@+id/applySellerShopStartMoney"
                    android:text="注册资本" />

                <EditText
                    android:id="@+id/applySellerShopStartMoney"
                    style="@style/shop_apply_right_et"
                    android:layout_below="@+id/applySellerShopFundDate"
                    android:layout_marginRight="@dimen/dp_12"
                    android:layout_toLeftOf="@+id/rightNoUseStartMoney"
                    android:layout_toRightOf="@+id/noticeSellerShopStartMoney"
                    android:hint="公司注册资金"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/rightNoUseStartMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/applySellerShopStartMoney"
                    android:layout_alignBottom="@+id/applySellerShopStartMoney"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_8"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dp_8"
                    android:paddingRight="@dimen/dp_8"
                    android:text="(万元)"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/noticeSellerShopLegalName"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/applySellerShopLegalName"
                    android:layout_alignBottom="@+id/applySellerShopLegalName"
                    android:text="法人姓名" />

                <EditText
                    android:id="@+id/applySellerShopLegalName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/applySellerShopStartMoney"
                    android:layout_toLeftOf="@+id/noticeSellerShopCardType"
                    android:layout_toRightOf="@+id/noticeSellerShopLegalName"
                    android:hint="姓名"
                    android:inputType="text"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/noticeSellerShopCardType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/applySellerShopLegalName"
                    android:layout_alignBottom="@+id/applySellerShopLegalName"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_toLeftOf="@+id/applySellerShopCardType"
                    android:drawableRight="@drawable/arrow_down_16"
                    android:gravity="center"
                    android:text="证件类型" />

                <TextView
                    android:id="@+id/applySellerShopCardType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/applySellerShopLegalName"
                    android:layout_alignBottom="@+id/applySellerShopLegalName"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_8"
                    android:gravity="center"
                    android:text="身份证" />


                <TextView
                    android:id="@+id/noticeSellerCardNum"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/applySellerCardNum"
                    android:layout_alignBottom="@+id/applySellerCardNum"
                    android:text="证件号" />

                <EditText
                    android:id="@+id/applySellerCardNum"
                    style="@style/shop_apply_right_et"
                    android:layout_below="@+id/applySellerShopLegalName"
                    android:layout_toEndOf="@+id/noticeSellerCardNum"
                    android:hint="请输入证件号码"
                    android:inputType="text"
                    android:maxLength="18" />

                <TextView
                    android:id="@+id/noticeSellerLicenseNum"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/applySellerLicenseNum"
                    android:layout_alignBottom="@+id/applySellerLicenseNum"
                    android:text="执照号" />

                <EditText
                    android:id="@+id/applySellerLicenseNum"
                    style="@style/shop_apply_right_et"
                    android:layout_below="@+id/applySellerCardNum"
                    android:layout_toEndOf="@+id/noticeSellerLicenseNum"
                    android:hint="营业执照注册号"
                    android:inputType="text"
                    android:maxLength="18" />

                <TextView
                    android:id="@+id/noticeSellerLicenseAddress"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/applySellerLicenseAddress"
                    android:layout_alignBottom="@+id/applySellerLicenseAddress"
                    android:text="执照地址" />

                <EditText
                    android:id="@+id/applySellerLicenseAddress"
                    style="@style/shop_apply_right_et"
                    android:layout_below="@+id/applySellerLicenseNum"
                    android:layout_toEndOf="@+id/noticeSellerLicenseAddress"
                    android:hint="营业执照所在地"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/noticeSellerBusDuration"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/noticeSellerBusDurationRoot"
                    android:layout_alignBottom="@+id/noticeSellerBusDurationRoot"
                    android:text="营业期限" />

                <LinearLayout
                    android:id="@+id/noticeSellerBusDurationRoot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/applySellerLicenseAddress"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_toEndOf="@+id/noticeSellerBusDuration"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingBottom="@dimen/dp_8">

                    <LinearLayout
                        android:id="@+id/sellerBusDurationStartRoot"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/arrow_down_16"
                            android:gravity="center_vertical"
                            android:text="@string/start_str" />

                        <TextView
                            android:id="@+id/applySellerBusDurationStart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_8" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sellerBusDurationEndRoot"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/arrow_down_16"
                            android:gravity="center_vertical"
                            android:text="@string/end_str" />

                        <TextView
                            android:id="@+id/applySellerBusDurationEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/applySellerLicenseAddress"
                            android:layout_marginLeft="@dimen/dp_8" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/noticeSellerLicenseType"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/applySellerLicenseType"
                    android:layout_alignBottom="@+id/applySellerLicenseType"
                    android:text="@string/license_type_str" />

                <TextView
                    android:id="@+id/applySellerLicenseType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/noticeSellerBusDurationRoot"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_toEndOf="@+id/noticeSellerLicenseType"
                    android:drawableLeft="@drawable/arrow_down_16"
                    android:drawablePadding="@dimen/dp_12"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingBottom="@dimen/dp_8" />

                <LinearLayout
                    android:id="@+id/sellerApplyImgRoot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/applySellerLicenseType"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginRight="@dimen/dp_8"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/shop_apply_left_tv"
                        android:layout_width="match_parent"
                        android:gravity="left|center_vertical"
                        android:paddingTop="@dimen/dp_8"
                        android:paddingBottom="@dimen/dp_8"
                        android:text="执照图片：(2:1, 建议大小 800x400 )" />

                    <ImageView
                        android:id="@+id/applyBusImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:duplicateParentState="true"
                        android:focusable="true"
                        android:foregroundGravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/add_center_white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/noticeSellerEmContact"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/applySellerEmContact"
                    android:layout_alignBottom="@+id/applySellerEmContact"
                    android:text="联系人" />

                <EditText
                    android:id="@+id/applySellerEmContact"
                    style="@style/shop_apply_right_et"
                    android:layout_below="@+id/sellerApplyImgRoot"
                    android:layout_toEndOf="@+id/noticeSellerEmContact"
                    android:hint="紧急联系人姓名"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/noticeSellerEmPhone"
                    style="@style/shop_apply_left_tv"
                    android:layout_alignTop="@+id/applySellerEmPhone"
                    android:layout_alignBottom="@+id/applySellerEmPhone"
                    android:text="联系电话" />

                <EditText
                    android:id="@+id/applySellerEmPhone"
                    style="@style/shop_apply_right_et"
                    android:layout_below="@+id/applySellerEmContact"
                    android:layout_toEndOf="@+id/noticeSellerEmPhone"
                    android:hint="紧急联系人电话号码"
                    android:inputType="phone"
                    android:maxLength="11" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/applySellerEmPhone"
                    android:layout_marginLeft="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginRight="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/clickToSave"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_weight="1"
                        android:background="@drawable/round_cornor_24dp_bg"
                        android:gravity="center"
                        android:paddingTop="@dimen/dp_12"
                        android:paddingBottom="@dimen/dp_12"
                        android:text="保存"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/clickToSubmitPublish"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_weight="1"
                        android:background="@drawable/round_cornor_24dp_bg"
                        android:gravity="center"
                        android:paddingTop="@dimen/dp_12"
                        android:paddingBottom="@dimen/dp_12"
                        android:text="提交审核"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


</layout>